<resources>

    <string name="app_name">MyNextMovie</string>

    <string name="poster_desc">Cartaz do filme</string>
    <string name="orderby">Ordernar por</string>
    <string name="popular">Mais popular</string>
    <string name="best_rated">Melhor avaliado</string>
    <string name="my_favorits">Meus favoritos</string>
    <string name="avaliacao">Avaliação:</string>
    <string name="lancamento">Lançamento:</string>
    <string name="poster_do_filme">Poster do filme</string>
    <string name="ops">Ops! Parece que o aplicativo não conseguiu se conectar à internet ou ao servidor!</string>
    <string name="tentar_novamente">Tentar novamente</string>

    <string name="order_popular">popular</string>
    <string name="order_top_rated">top_rated</string>

    <string name="erro_ler_json">Erro ao ler JSON</string>

    <string name="pref_label_num_col">Número de Colunas</string>
    <string name="pref_key_num_col">num_col</string>
    <string name="pref_value_num_col">2</string>
    <string name="menu_preferencias">Preferências</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>

    <string name="menu_Favoritar">Adicionar aos favoritos.</string>
    <string name="menu_DesFavoritar">Remover dos favoritos.</string>

    <string name="add_favoritos">"Adicionado aos favoritos!"</string>
    <string name="remove_favoritos">"Removido dos favoritos!"</string>
    <string name="reticencias">...</string>

</resources>
