<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/orderby" android:id="@+id/mnuOrder" android:orderInCategory="1"
        app:showAsAction="ifRoom" >
        <menu>
                <item android:title="@string/popular" android:id="@+id/mnuPop" android:orderInCategory="101"
                    android:icon="@drawable/ic_whatshot_white_24dp" app:showAsAction="withText"
                    />

                <item android:title="@string/best_rated" android:id="@+id/mnuRat" android:orderInCategory="102"
                    android:icon="@drawable/ic_star_white_24dp" app:showAsAction="withText"/>

        </menu>

    </item>
    <item android:title="@string/menu_preferencias"
        app:showAsAction="never"
        android:id="@+id/mnuPreferencias" />


</menu>